# humanvals

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  llms.txt  pyproject.toml  render.yaml
.claude/skills/base/: SKILL.md
.claude/skills/python/: fizzbuzz.py
.github/workflows/: ci.yml
.icpg/: .current-intent
_project_specs/: overview.md
_project_specs/features/: core-library.md
_project_specs/session/: current-state.md  decisions.md
_project_specs/todos/: active.md
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  types.ts
dashboard/src/components/: ChatView.tsx  EvalForm.tsx  GuidelinesView.tsx  InterventionChart.tsx  MetricsView.tsx  ReviewView.tsx  SummaryTiles.tsx
docs/: AGENT_GUIDE.md  HumanVals_RFC.md
docs/adr/: 0001-project-init.md  0002-domain-model.md  0003-storage-sqlite.md  0004-intent-matching.md  0005-injection-budget.md  0006-promotion-policy.md  0007-curation-contradiction.md  0008-server-dashboard-adapters.md  0009-policy-vs-heuristic.md
examples/: crewai_agent.py  langgraph_agent.py  live_agent.py  pydantic_ai_agent.py  scenario.py
scripts/: seed_demo.py  seed_remote.py
src/humanvals/: __init__.py  client.py  curation.py  embedding.py  metrics.py  models.py  promotion.py  retrieval.py  store.py
src/humanvals/server/: app.py  (+2 more)
tests/: conftest.py  test_client.py  test_curation.py  test_demo_chat.py  test_embedding.py  test_examples.py  test_injector.py  test_intent.py  test_metrics.py  test_policy.py  test_promotion.py  test_server.py  test_store.py
(+1 files in other folders)
