[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humanvals"
version = "0.1.0"
description = "Human feedback -> agent memory. Collect operator evaluations of agent outputs, turn them into retrievable guidelines, measure their impact, and promote what works."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Ali Naqi Shaheen" }]
keywords = ["agents", "memory", "human-feedback", "evaluation", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/alinaqi/humanvals"
RFC = "https://github.com/alinaqi/alinaqi/blob/main/docs"

[project.optional-dependencies]
server = ["fastapi>=0.115", "uvicorn>=0.30"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "httpx>=0.27",
  "fastapi>=0.115",
  "uvicorn>=0.30"
]
examples = [
    "crewai>=1.15.5",
    "langgraph>=1.2.9",
    "pydantic-ai-slim>=2.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/humanvals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/humanvals"]
